# Desafio_Tecnico_Dasa

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  coordinates.py  core.py  main.py  models.py  routes.py  utils.py
app/static/: main.js  style.css
app/templates/: base.html  index.html
tests/: test_basic.py
